objects/ChargentOrders__Chargent_Automated_Collections__c.object
<CustomObject>
    <fields>
        <fullName>ChargentOrders__AC_Process_Name__c</fullName>
        <description>Automated collection process name.</description>
        <formula>ChargentOrders__AC_Process__r.ChargentOrders__Process_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AC Process Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__AC_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the name of the AC Process that’s been triggered.</description>
        <inlineHelpText>Displays the name of the AC Process that’s been triggered.</inlineHelpText>
        <label>AC Process</label>
        <referenceTo>ChargentOrders__Chargent_AC_Configuration__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__AC_Stage__c</fullName>
        <description>AC Stage executed / total</description>
        <formula>IF( ISBLANK(ChargentOrders__Stage__c) ,&quot;0/&quot;&amp;TEXT(ChargentOrders__Stages_Total__c), ChargentOrders__Stage__c &amp;&quot;/&quot;&amp; TEXT(ChargentOrders__Stages_Total__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AC Stage executed / total</inlineHelpText>
        <label>AC Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Account related to the Chargent Order record that this Automated Collections process was triggered on.</description>
        <inlineHelpText>This is the Account related to the Chargent Order record that this Automated Collections process was triggered on.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Chargent Automated Collections</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Chargent_Order__c</fullName>
        <description>This is the Chargent Order record that this Automated Collections process was triggered on.</description>
        <inlineHelpText>This is the Chargent Order record that this Automated Collections process was triggered on.</inlineHelpText>
        <label>Chargent Order</label>
        <referenceTo>ChargentOrders__ChargentOrder__c</referenceTo>
        <relationshipLabel>Chargent Automated Collections</relationshipLabel>
        <relationshipName>Chargent_Automated_Collections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Contact_Emailed__c</fullName>
        <description>This is the Contact / email address that this Automated Collections process will send emails to.</description>
        <inlineHelpText>This is the Contact / email address that this Automated Collections process will send emails to.</inlineHelpText>
        <label>Contact Emailed</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Next_Stage_Date__c</fullName>
        <description>This field displays the date that the next stage in this AC Process is scheduled to execute.</description>
        <inlineHelpText>This field displays the date that the next stage in this AC Process is scheduled to execute.</inlineHelpText>
        <label>Next Stage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Order_Charge_Amount__c</fullName>
        <description>Related Order charge amount.</description>
        <formula>ChargentOrders__Chargent_Order__r.ChargentOrders__Charge_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Related Order charge amount.</inlineHelpText>
        <label>Order Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__PR_Page__c</fullName>
        <description>This field displays the name of the Payment Request Page used (if any) when this AC Process triggered. This should be pulled from the “Payment Request Page Name” field from the Payment Request Page.</description>
        <inlineHelpText>This field displays the name of the Payment Request Page used (if any) when this AC Process triggered. This should be pulled from the “Payment Request Page Name” field from the Payment Request Page.</inlineHelpText>
        <label>PR Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Collected_Via__c</fullName>
        <description>Indicates how the payment was collected.</description>
        <inlineHelpText>Indicates how the payment was collected.</inlineHelpText>
        <label>Payment Collected Via</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC PR Link</fullName>
                </value>
                <value>
                    <fullName>AC Auto Retry</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Payment Not Collected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentOrders__Payment_Received__c</fullName>
        <description>This field displays the date / time that the payment was collected during this Automated Collections process.</description>
        <inlineHelpText>This field displays the date / time that the payment was collected during this Automated Collections process.</inlineHelpText>
        <label>Payment Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Post_Collection_Payment_Status__c</fullName>
        <description>This field indicates what the value of the &apos;Payment Status&apos; field will be on the related Chargent Order record after this Automated Collections process has collected a payment.</description>
        <inlineHelpText>This field indicates what the value of the &apos;Payment Status&apos; field will be on the related Chargent Order record after this Automated Collections process has collected a payment.</inlineHelpText>
        <label>Post-Collection Payment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Sender_Email__c</fullName>
        <description>Displays the email address that this AC Process will send emails from (if configured to do so).</description>
        <inlineHelpText>Displays the email address that this AC Process will send emails from (if configured to do so).</inlineHelpText>
        <label>Sender Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Stage__c</fullName>
        <description>This field indicates which field was last executed.</description>
        <inlineHelpText>This field indicates which field was last executed.</inlineHelpText>
        <label>Last Stage Executed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Stages_Total__c</fullName>
        <label>Stages Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentOrders__Status__c</fullName>
        <description>This field displays the status of this Automated Collections process for this Chargent Order record.</description>
        <inlineHelpText>This field displays the status of this Automated Collections process for this Chargent Order record.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                    <default>true</default>
                    <label>In progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed (Stopped)</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Chargent Automated Collections</label>
    <nameField>
        <displayFormat>AC-{000000000}</displayFormat>
        <label>Chargent Automated Collections ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chargent Automated Collections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>